# stm32mp1xx-hal

./: Cargo.toml  Embed.toml  README.md  memory.x  stm32mp1.x
.cargo/: config
examples/: blinky.rs
src/: gpio.rs  gpio.rs.old  ipcc.rs  lib.rs  prelude.rs  rcc.rs  watchdog.rs
