[package]
authors = ["Maxime Borges <contact@maximeborg.es>", "Jorge Aparicio <jorge@japaric.io>", "Daniel Egger <daniel@eggers-club.de>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the STM32MP1xx family of microcontrollers"
keywords = ["arm", "cortex-m", "stm32", "hal"]
license = "MIT OR Apache-2.0"
name = "stm32mp1xx-hal"
repository = "https://github.com/stm32-rs/stm32mp1xx-hal"
documentation = "https://docs.rs/stm32mp1xx-hal"
readme = "README.md"
edition = "2018"
version = "0.7.0"

[package.metadata.docs.rs]
features = ["stm32mp157", "rt", "stm32-usbd"]
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
nb = "0.1.2"
embedded-dma = "0.1.2"

[dependencies.stm32mp1]
path = "../stm32-rs/stm32mp1"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.stm32-usbd]
version = "0.5.0"
features = ["ram_access_1x16"]
optional = true

[dev-dependencies]
panic-halt = "0.2.0"
panic-semihosting = "0.5.2"
panic-itm = "0.4.1"
cortex-m-rtfm = "0.5.3"
cortex-m-semihosting = "0.3.3"
heapless = "0.4.3"
m = "0.1.1"
mfrc522 = "0.2.0"
serde_derive = "1.0.90"
usb-device = "0.2.3"
usbd-serial = "0.1.0"

[dev-dependencies.byteorder]
default-features = false
version = "1.3.1"

[dev-dependencies.cobs]
default-features = false
version = "0.1.4"

[dev-dependencies.crc16]
default-features = false
version = "0.4.0"

[dev-dependencies.either]
default-features = false
version = "1.5.2"

[dev-dependencies.serde]
default-features = false
version = "1.0.90"

[features]
device-selected = []
doc = []
rt = ["stm32mp1/rt"]
stm32mp157 = ["stm32mp1/stm32mp157", "device-selected"]

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true

[[example]]
name = "blinky"
required-features = ["rt", "stm32mp157"]
